Spacing bugs

--- a/app/styles/modules/_more-top-articles.scss
+++ b/app/styles/modules/_more-top-articles.scss
@@ -63,6 +63,11 @@ Styleguide 4.1
  */
 
 .more-top-articles {
+
+  h3{
+    margin-bottom: 27px;
+  }
+
   .section-title {
     margin-bottom: 30px;
     position: relative;
